TAG: qcreports_db-5-1-6-2
TAG: qcreports_db-5-1-6-1
DATE: 11/25/2013
STAFF: lec
CHANGES: 
a) TR11544/weekly/ALL_MolNotesNoMP.py : add more excluded J:'s
b) TR11104/monthly/ALL_RefCounts.py : new/for Steve Rockwood

TAG: qcreports_db-5-1-5-6
DATE: 11/18/2013
STAFF: lec
CHANGES: TR11522/
moved 'ALL_Notes.py' from monthly to weekly

TAG: qcreports_db-5-1-5-5
DATE: 11/18/2013
STAFF: lec
CHANGES: TR11253
mgd/PRB_StrainByDate.sql: add 'mberry'/11/19/2013 to exclusion list

TAG: qcreports_db-tr11468
DATE: 11/08/2013
STAFF: ob
CHANGES: TR11468
Branch point tag for TR11468

TAG: qcreports_db-5-1-5-4
DATE: 10/07/2013
STAFF: lec
CHANGES: TR11253
mgd/PRB_StrainByDate.sql: add 'mberry'/10/08/2013 to exclusion list

TAG: qcreports_db-5-1-5-3
DATE: 10/07/2013
STAFF: lec
CHANGES: TR11423/disease-portal/omim-cluster reports
qcr.html : added omim-cluster reports
these reports will *not* exist until the human-disease-cluster project
is installed on production

TAG: qcreports_db-5-1-5-2
DATE: 09/16/2013
STAFF: lec
CHANGES: TR11253
mgd/PRB_StrainByDate.sql: add 'mberry'/09/17/2013 to exclusion list

TAG: qcreports_db-5-1-5-1
DATE: 09/06/2013
STAFF: lec
CHANGES: 
TR11350/mgd/RECOMB_ImageCheck.sql: obsolete

TAG: qcreports_db-5-1-4-5
DATE: 08/20/2013, 08/21/2013
STAFF: lec
CHANGES: 
TR11349/mgd/GXD_ImageCheck.sql: remove thumbnail
TR11373/mgd/MRK_QTL.py : new qtl reports

TAG: qcreports_db-5-1-4-4
DATE: 08/08/2013
STAFF: lec
CHANGES: TR11253
mgd/PRB_StrainByDate.sql: add 'mberry'/07/14/2013 to exclusion list

TAG: qcreports_db-5-1-4-3
DATE: 07/25/2013
STAFF: sc
CHANGES: TR11398
1) added weekly/GXD_DuplicateSpecimenLabel.sql
2) qcr.html - added above 

TAG: qcreports_db-5-1-4-2
DATE: 07/16/2013
STAFF: lec
CHANGES: TR11253
mgd/PRB_StrainByDate.sql: add 'mberry'/07/14/2013 to exclusion list

TAG: qcreports_db-5-1-4-1
DATE: 06/27/2013
STAFF: sc	
CHANGES: qcr.html - update orthologyload to homologyload

TAG: qcreports_db-5-1-3-3
DATE: 06/07/2013
STAFF: lec
CHANGES: 
TR11383/bobs reports